Fixed No Scroll on Mobile Device

--- a/style.css
+++ b/style.css
@@ -32,7 +32,6 @@ html.lenis body {
 }
 html{
     height: 100vh;
-    overflow: hidden;
 }
 
 body{
